--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,5 @@
-<%= form_with model:@books do |f| %>
+<h1>New Book</h1>
+<%= form_with model:@book do |f| %>
 
 <p>Title</p>
 <%= f.text_field :title %>
@@ -7,4 +8,14 @@
 <%= f.text_area :body %>
 
 <%= f.submit 'Create Book' %>
+<% end %>
+
+<h1>Books</h1>
+<p>title opinion</p>
+<% @books.each do |book| %>
+<div>
+    <%= image_tag book.user.get_profile_image(100,100) %>
+    <p><%= book.title %></p>
+    <p><%= book.body %></p>
+</div>
 <% end %>
