--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <% if user_signed_in? %>
        <li><%= link_to'Home', top_path %></li>
        <li><%= link_to'Users', users_path %></li>
-       <li><%= link_to'Books', new_book_path %></li>
+       <li><%= link_to'Books', books_path %></li>
        <li><%= link_to'Log out', destroy_user_session_path, method: :delete %></li>
       <% else %>
        <li><%= link_to'Home', top_path%></li>
