--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,7 +14,7 @@
 <p>title opinion</p>
 <% @books.each do |book| %>
 <div>
-    <%= image_tag book.user.get_profile_image(100,100) %>
+    <p>投稿ユーザー画像</p>
     <p><%= book.title %></p>
     <p><%= book.body %></p>
 </div>
