--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-
+<h2>Users</h2>
 <div>
  <table>
   <thead>
@@ -8,17 +8,14 @@
    </tr>
   </thead>
   <tbody>
-<% @users each do |users| %>
+<% @users.each do |user| %>
     <tr>
-     <td></td>
-     <td></td>
-     <td></td>
+     <td>ユーザー画像</td>
+     <td><%= user.name %></td>
+     <td><%= link_to'show',user_path(user.id) %></td>
     </tr>
-
-
+ <% end %>
   </tbody>
-
  </table>
-
 </div>
 
