--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,18 @@
-<h2>Users</h2>
+<h2>Books</h2>
 
-<h4>image     name</h4>
-
-<% 
+<div>
+  <table>
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>Opinion</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td><p>画像</p></td>
+        <td><%= </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
