--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -19,8 +19,8 @@
       <td><%= @books.title %></td>
       <td><%= @books.body %></td>
       <% if @user.id == current_user.id %>
-      <td><%= link_to'Edit', edit_book_path(@books) %></td>
-      <td><%= link_to'Destroy', book_path(@books), method: :delete,  data: {confirm: "本当に消しますか？"} %></td>
+      <td><%= link_to'Edit', edit_book_path(@books), class:"btn btn-sm btn-success" %></td>
+      <td><%= link_to'Destroy', book_path(@books), class:"btn btn-sm btn-danger", method: :delete,  data: {confirm: "本当に消しますか？"} %></td>
       <% else %>
       <td></td>
       <td></td>
